sumo/tests/netconvert/import/XML/errors/broken_edge/edge#priority__false1/errors.netconvert
Error: Not numeric value for priority in edge '1'.
Quitting (on error).
